<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.thinkful.notes.ColorSettings"
    android:id="@+id/BGLabel">

    <TextView android:text="@string/background_setting_label" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BGLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settingsLabel"
        android:textSize="24sp"
        android:paddingTop="@dimen/abc_button_padding_vertical_material"
        android:paddingBottom="8sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="48sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/settingsLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/ripple_material_light"
        style="@style/TextAppearance.AppCompat.Title"
        android:gravity="center_vertical"
        android:textSize="32sp"
        android:text="@string/color_settings_page_label" />

    <TextView
        android:text="@string/foreground_setting_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/FGLabel"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp"
        android:padding="@dimen/abc_button_padding_vertical_material" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/BGRadio"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/BGLabel"
        android:layout_above="@+id/FGLabel">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background_red_label"
            android:id="@+id/red" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background_green_label"
            android:id="@+id/green" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background_white_label"
            android:id="@+id/white" />

    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/FGLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:id="@+id/FGRadio"
        android:padding="5sp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foreground_purple_label"
            android:id="@+id/purple" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foreground_yellow_label"
            android:id="@+id/yellow" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foreground_grey_label"
            android:id="@+id/grey" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foreground_black_label"
            android:id="@+id/black" />
    </RadioGroup>

</RelativeLayout>
